# nRF_benchmark

./: README.md
CMSIS_LIB/CM_KWS/: CMakeLists.txt  kws_input_data.h  kws_model_data.cc  main.cpp  prj.conf
TINY_AnomalyDetection/: CMakeLists.txt  README.md  main.cpp  model2.cpp  prj.conf  pyserial_basic.py  submitter_implemented.cpp  submitter_implemented.h
TINY_AnomalyDetection/build_5283/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
TINY_AnomalyDetection/build_5283/Kconfig/: Kconfig.shield.defconfig
TINY_AnomalyDetection/build_5283/zephyr/: .cmake.dotconfig.checksum  .config  cmake_install.cmake  dts.cmake  edt.pickle  linker_zephyr_prebuilt.cmd  linker_zephyr_prebuilt.cmd.dep  nrf52833dk_nrf52833.dts.pre.d  nrf52833dk_nrf52833.dts.pre.tmp  runners.yaml  zephyr.dts  zephyr_prebuilt.map
TINY_AnomalyDetection/build_TINY/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
TINY_AnomalyDetection/build_TINY/zephyr/: .cmake.dotconfig.checksum  cmake_install.cmake  edt.pickle  isr_tables.c  linker.cmd  linker.cmd.dep  linker_zephyr_prebuilt.cmd.dep  nrf52840dk_nrf52840.dts.pre.tmp  zephyr.hex  zephyr.lst  zephyr.map  zephyr.stat  zephyr_prebuilt.map
TINY_AnomalyDetection/build_nRF53/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  ozone.jdebug
TINY_AnomalyDetection/build_nRF53/Kconfig/: Kconfig.shield
TINY_AnomalyDetection/build_nRF53/zephyr/: .cmake.dotconfig.checksum  .config  cmake_install.cmake  edt.pickle  isr_tables.c  linker.cmd  linker.cmd.dep  linker_zephyr_prebuilt.cmd.dep  nrf5340dk_nrf5340_cpuapp.dts.pre.d  nrf5340dk_nrf5340_cpuapp.dts.pre.tmp  zephyr.dts  zephyr.hex  zephyr.lst  zephyr.map  zephyr.stat  zephyr_prebuilt.map
TINY_ImageClassifier/: CMakeLists.txt  README.md  ic_inputs.cc  ic_model_quant_data.cc  ic_model_quant_data.h  main.cpp  prj.conf  pyserial_basic.py  submitter_implemented.cpp  submitter_implemented.h
TINY_ImageClassifier/build_TINY/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
TINY_ImageClassifier/build_TINY/Kconfig/: Kconfig.shield  Kconfig.shield.defconfig
TINY_ImageClassifier/build_TINY/zephyr/: .cmake.dotconfig.checksum  cmake_install.cmake  dev_handles.c  dts.cmake  edt.pickle  isr_tables.c  linker.cmd.dep  linker_zephyr_prebuilt.cmd.dep  nrf52840dk_nrf52840.dts.pre.tmp  zephyr.dts  zephyr.hex  zephyr.lst  zephyr.map  zephyr.stat  zephyr_prebuilt.map
TINY_ImageClassifier/build_nRF53/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  zephyr_settings.txt
TINY_ImageClassifier/build_nRF53/Kconfig/: Kconfig.shield  Kconfig.shield.defconfig
TINY_ImageClassifier/build_nRF53/zephyr/: .cmake.dotconfig.checksum  cmake_install.cmake  edt.pickle  isr_tables.c  linker.cmd  linker.cmd.dep  linker_zephyr_prebuilt.cmd.dep  nrf5340dk_nrf5340_cpuapp.dts.pre.d  zephyr.hex  zephyr.lst  zephyr.map  zephyr.stat  zephyr_prebuilt.map
TINY_ImageClassifier/build_nRF53_TINY/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
TINY_ImageClassifier/build_nRF53_TINY/zephyr/: cmake_install.cmake  edt.pickle  linker_zephyr_prebuilt.cmd.dep  zephyr_prebuilt.map
TINY_KeywordSpotting/: CMakeLists.txt  Info.txt  README.md  internally_implemented.h  kws_model_data.h  prj.conf  submitter_implemented.cpp  submitter_implemented.h
TINY_KeywordSpotting/build_TINY/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
TINY_KeywordSpotting/build_TINY/zephyr/: .cmake.dotconfig.checksum  .config  .config.old  cmake_install.cmake  dts.cmake  edt.pickle  isr_tables.c  linker.cmd.dep  linker_zephyr_prebuilt.cmd.dep  nrf52840dk_nrf52840.dts.pre.d  nrf52840dk_nrf52840.dts.pre.tmp  runners.yaml  zephyr.hex  zephyr.lst  zephyr.map  zephyr.stat  zephyr_prebuilt.map
TINY_KeywordSpotting/build_nRF53/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
TINY_KeywordSpotting/build_nRF53/zephyr/: .cmake.dotconfig.checksum  .config  .config.old  cmake_install.cmake  edt.pickle  isr_tables.c  linker.cmd.dep  linker_zephyr_prebuilt.cmd.dep  runners.yaml  zephyr.hex  zephyr.lst  zephyr.map  zephyr.stat  zephyr_prebuilt.map
TINY_VisualWakeWords/: CMakeLists.txt  README.md  prj.conf  submitter_implemented.cpp  submitter_implemented.h
TINY_VisualWakeWords/build_53/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  ram.json  rom.json
TINY_VisualWakeWords/build_53/Kconfig/: Kconfig.shield  Kconfig.shield.defconfig
TINY_VisualWakeWords/build_53/zephyr/: .cmake.dotconfig.checksum  cmake_install.cmake  dts.cmake  edt.pickle  isr_tables.c  linker.cmd.dep  linker_zephyr_prebuilt.cmd  linker_zephyr_prebuilt.cmd.dep  nrf5340dk_nrf5340_cpuapp.dts.pre.tmp  zephyr.hex  zephyr.lst  zephyr.map  zephyr.stat  zephyr_prebuilt.map
TINY_VisualWakeWords/build_TINY/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
TINY_VisualWakeWords/build_TINY/zephyr/: .cmake.dotconfig.checksum  cmake_install.cmake  edt.pickle  isr_tables.c  linker.cmd.dep  linker_zephyr_prebuilt.cmd.dep  zephyr.hex  zephyr.lst  zephyr.map  zephyr.stat  zephyr_prebuilt.map
TINY_VisualWakeWords/build_f/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
TINY_VisualWakeWords/build_f/Kconfig/: Kconfig.shield  Kconfig.shield.defconfig
TINY_VisualWakeWords/build_f/zephyr/: .cmake.dotconfig.checksum  .config  cmake_install.cmake  edt.pickle  isr_tables.c  linker.cmd.dep  linker_zephyr_prebuilt.cmd.dep  (+7 more)
TINY_VisualWakeWords/build_nRF53/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  zephyr_modules.txt
TINY_VisualWakeWords/build_tst/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
(+611 files in other folders)
